# btc-Golden-Engine

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  __main__.py  _benchmark_gpu.py  _coverage_tdr.py  _full_test_out.txt  _run_mypy.py  _run_tests.py  _test_out.txt  code_review_report.md  collision_engine.py  collision_target.py  docker-compose.yml  extract_utxo_hash160.py  extract_utxo_xonly.py  get_balance_addresses.py  get_balances.ps1  mypy_dist.txt  mypy_full.txt  mypy_out.txt  parse_wallet.py  pyproject.toml  requirements.txt  ruff_ci.txt  ruff_ci2.txt  ruff_ci3.txt  ruff_ci5.txt  ruff_ci_pyproject.txt  ruff_fmt.txt  ruff_fmt_check.txt  ruff_out.txt  ruff_ver.txt  scan_balance.py  verify_hash160.py  view_transactions.py
.github/: dependabot.yml
.github/workflows/: benchmark.yml  ci.yml  codecov.yml  codeql.yml  release.yml  stale.yml
.trunk/: trunk.yaml
.trunk/configs/: ruff.toml
api/: __init__.py  metrics.py  routes.py  server.py  state.py
api/templates/: dashboard.html
core/: __init__.py  config.py  database.py  errors.py  logger.py  notifier.py  stats.py
distributed/: README.md  __init__.py  master.py  models.py  protocol.proto  protocol_pb2.py  protocol_pb2_grpc.py  test_distributed.py  worker.py
docs/: benchmark_regression.md  dependency_security.md  gpu_optimization_plan.md  gpu_usage.md  monitoring_guide.md  production_plan.md
gpu_engine/: __init__.py  gpu_device.py  gpu_dispatcher.py  gpu_kernel.h  gpu_pipeline.py  kernel_test_vectors.json  tdr_handler.py  test_kernel_compile.py  test_vectors.py
share/rpcauth/: rpcauth.py
tests/: __init__.py  benchmark_baseline.json  conftest.py  test_api.py  test_benchmark.py  test_benchmark_regression.py  test_collision_engine.py  test_collision_target.py  test_config.py  test_database.py  test_e2e_collision.py  test_errors.py  test_gpu_device.py  test_gpu_dispatcher.py  test_gpu_pipeline.py  test_logger.py  test_metrics.py  test_notifier.py  test_stats.py  test_tdr_handler.py
