[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bitcoin-collision-finder"
version = "2.3.0"
description = "Bitcoin 私钥碰撞检测系统"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
keywords = ["bitcoin", "collision", "private-key", "gpu"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
]

dependencies = [
    "coincurve>=3.0.0",
    "bech32>=1.2.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
gpu = ["pyopencl>=2024.1"]
web = ["fastapi>=0.110.0", "uvicorn>=0.29.0", "jinja2>=3.1.0", "websockets>=12.0"]
dev = [
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-benchmark>=4.0",
    "httpx>=0.28.0",
]
distributed = [
    "grpcio>=1.60.0",
    "protobuf>=4.25.0",
]
all = [
    "pyopencl>=2024.1",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "jinja2>=3.1.0",
    "websockets>=12.0",
    "grpcio>=1.60.0",
    "protobuf>=4.25.0",
]

[project.urls]
Homepage = "https://github.com/Pengkang-OP/btc-Golden-Engine"
Repository = "https://github.com/Pengkang-OP/btc-Golden-Engine"
Documentation = "https://github.com/Pengkang-OP/btc-Golden-Engine#readme"
"Bug Tracker" = "https://github.com/Pengkang-OP/btc-Golden-Engine/issues"

[project.scripts]
collision-engine = "collision_engine:main"

[tool.setuptools.packages.find]
include = ["core*", "gpu_engine*", "distributed*"]

[tool.ruff]
exclude = ["distributed/protocol_pb2*.py"]
lint.ignore = ["E501"]

[tool.mypy]
strict = true
ignore_missing_imports = true
platform = "linux"
warn_unused_ignores = true
warn_return_any = true

# ── 模块级豁免 ────────────────────────────────────────────────
# 提取脚本：独立运行，非项目核心导入模块
[[tool.mypy.overrides]]
module = [
    "extract_utxo_hash160",
    "extract_utxo_xonly",
]
disable_error_code = [
    "no-untyped-def",
    "no-untyped-call",
    "str-bytes-safe",
    "assignment",
    "type-arg",
    "no-any-return",
]

# 测试文件：类型注解完整度低于生产代码
[[tool.mypy.overrides]]
module = [
    "gpu_engine.test_kernel_compile",
    "gpu_engine.test_vectors",
]
disable_error_code = [
    "misc",
    "no-untyped-def",
    "no-untyped-call",
    "type-arg",
    "assignment",
    "str-bytes-safe",

]

# protobuf 生成代码：动态属性、无类型注解
[[tool.mypy.overrides]]
module = [
    "distributed.protocol_pb2",
    "distributed.protocol_pb2_grpc",
]
disable_error_code = [
    "attr-defined",
    "no-untyped-def",
]

# 分布式扫描模块：依赖 protobuf/gRPC 动态代码，降低 strict 要求
[[tool.mypy.overrides]]
module = [
    "distributed.master",
    "distributed.worker",
    "distributed.models",
    "distributed.test_distributed",
]
disable_error_code = [
    "misc",
    "attr-defined",
    "no-untyped-call",
    "no-untyped-def",
    "arg-type",
    "union-attr",
    "no-any-return",
]

# GPU 下调模块：部分内部辅助函数无需 strict 注解
[[tool.mypy.overrides]]
module = [
    "gpu_engine.gpu_pipeline",
    "gpu_engine.gpu_dispatcher",
    "api.server",
]
disable_error_code = [
    "no-untyped-call",
    "no-untyped-def",
    "arg-type",
    "unused-ignore",
]

# 测试目录：测试代码中的类型注解允许宽松
[[tool.mypy.overrides]]
module = [
    "tests.*",
]
disable_error_code = [
    "misc",
    "no-untyped-def",
    "no-untyped-call",
    "arg-type",
    "assignment",
    "union-attr",
]

# 根目录遗留/实用脚本：非生产模块，不施加 strict 检查
[[tool.mypy.overrides]]
module = [
    "view_transactions",
    "scan_balance",
    "parse_wallet",
    "get_balance_addresses",
    "verify_hash160",
    "_coverage_tdr",
]
disable_error_code = [
    "no-untyped-def",
    "no-untyped-call",
    "arg-type",
    "assignment",
    "union-attr",
    "return-value",
    "method-assign",
]

[tool.pytest.ini_options]
markers = [
    "gpu: 需要真实 GPU 硬件的测试（无 GPU 时自动跳过）",
]
