[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bitcoin-collision-finder"
version = "2.3.0"
description = "Bitcoin 私钥碰撞检测系统"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
keywords = ["bitcoin", "collision", "private-key", "gpu"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
]

dependencies = [
    "coincurve>=3.0.0",
    "bech32>=1.2.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
gpu = ["pyopencl>=2024.1"]
web = ["fastapi>=0.110.0", "uvicorn>=0.29.0", "jinja2>=3.1.0", "websockets>=12.0"]
dev = [
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-benchmark>=4.0",
    "httpx>=0.28.0",
]
distributed = [
    "grpcio>=1.60.0",
    "protobuf>=4.25.0",
]
all = [
    "pyopencl>=2024.1",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "jinja2>=3.1.0",
    "websockets>=12.0",
    "grpcio>=1.60.0",
    "protobuf>=4.25.0",
]

[project.urls]
Homepage = "https://github.com/Pengkang-OP/btc-Golden-Engine"
Repository = "https://github.com/Pengkang-OP/btc-Golden-Engine"
Documentation = "https://github.com/Pengkang-OP/btc-Golden-Engine#readme"
"Bug Tracker" = "https://github.com/Pengkang-OP/btc-Golden-Engine/issues"

[project.scripts]
collision-engine = "collision_engine:main"

[tool.setuptools.packages.find]
include = ["core*", "gpu_engine*", "distributed*"]

[tool.ruff]
exclude = [
    "distributed/protocol_pb2*.py",
    "ruff_check.py",
    "fix_unicode.py",
    "fix_logging.py",
    "_ruff_count.py",
    "_analyze_ruff.py",
    "_analyze_ruff2.py",
    "_fix_ruf.py",
    "_fix_remaining.py",
    "_fix_remaining2.py",
    "_check_suppressed.py",
    "_count_suppressed.py",
    "_remove_exemptions.py",
]

[tool.ruff.lint]
select = ["ANN", "ARG", "B", "BLE", "C", "COM", "D", "E", "EM", "ERA", "F", "FBT", "G", "I", "N", "PERF", "PL", "PTH", "Q", "RUF", "S", "SLF", "T", "TRY", "UP", "W"]
ignore = ["E501", "E402", "D203", "D213", "COM812", "EM101", "TRY003", "RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "ANN001", "ANN002", "ANN003", "ANN201", "ANN202", "ANN401",
    "D101", "D102", "D103",
    "ARG001", "ARG002", "ARG004", "ARG005",
    "S101", "SLF001", "S108", "S112", "S110",
    "PLR2004", "PLC0415", "PTH123", "PLW0406", "PLR0913",
    "RUF012", "RUF034",
    "B007", "BLE001", "ERA001", "FBT",
    "F403",
    "PT019", "SIM117",
]
"gpu_engine/test_*.py" = [
    "ANN001", "ANN002", "ANN003", "ANN201", "ANN202", "ANN401",
    "D101", "D102", "D103",
    "ARG001", "ARG002", "ARG004", "ARG005",
    "S101", "SLF001", "S108", "S112", "S110",
    "PLR2004", "PLC0415", "PTH123", "PLW0406", "PLR0913",
    "RUF012", "RUF034",
    "B007", "BLE001", "ERA001", "FBT",
    "SIM117",
]
"distributed/test_distributed.py" = [
    "ANN001", "ANN002", "ANN003", "ANN201", "ANN202", "ANN401",
    "D101", "D102", "D103",
    "ARG001", "ARG002", "ARG004", "ARG005",
    "S101", "SLF001", "S108", "S112", "S110",
    "PLR2004", "PLC0415", "PTH123", "PLW0406", "PLR0913",
    "RUF012", "RUF034",
    "B007", "BLE001", "ERA001", "FBT",
    "D107",
]
"distributed/worker.py" = [
    "ANN001", "ANN202",
    "D107",
    "FBT001", "FBT002",
    "G201",
    "N811",
    "PLR0913",
    "S110",
    "TRY300",
    "TRY401",
    "PLC0415",
]
"verify_hash160.py" = [
    "T201", "PTH123", "ARG001", "C901", "PLR0912", "PLR0915",
    "PLR2004", "PLC0415",
]
"extract_utxo_*.py" = [
    "T201", "ANN001", "ANN201", "ANN202",
    "DTZ005",
    "PLR2004",
    "ARG001",
    "C901",
    "PLR0912",
    "PLR0915",
    "PTH123",
    "PLC0415",
    "ERA001",
]
"parse_wallet.py" = [
    "T201", "FBT001", "FBT002", "BLE001", "C901", "TRY300",
]
"view_transactions.py" = [
    "T201", "BLE001", "C901", "PLR0912", "PLR0915", "S101",
    "PLR2004", "PTH123", "TRY300", "S603",
]
"scan_balance.py" = [
    "T201", "S603",
]
"collision_engine.py" = [
    "C901",
    "PLR0911",
    "PLR0912",
    "PLR0915",
    "PLW0603",
]
"collision_target.py" = [
    "F841",
    "PTH110",
    "S110",
    "PTH123",
    "PLR0911",
    "C901",
    "SIM105",
    "SIM115",
]
"api/routes.py" = [
    "ANN401",
    "PLC0415",
    "PLW0603",
]
"api/server.py" = [
    "C901",
    "PLR0915",
    "SLF001",
    "N806",
    "PLC0415",
]
"api/state.py" = [
    "ANN401",
    "PLC0415",
    "PLW0603",
]



"distributed/master.py" = [
    "ARG002",
    "D107",
    "TRY401",
    "N802",
    "SLF001",
    "E501",
    "PLC0415",
]


"gpu_engine/gpu_dispatcher.py" = [
    "F841",
    "SLF001",
    "S110",
    "SIM105",
    "PLC0415",
]
"gpu_engine/gpu_pipeline.py" = [
    "ANN401",
    "S110",
    "C901",
    "D417",
    "PLR0912",
    "PLR0913",
    "PLR0915",
    "ERA001",
    "NPY002",
    "SIM105",
    "PLC0415",
    "PLR2004",
]
"gpu_engine/tdr_handler.py" = [
    "SIM105",
    "PLC0415",
    "PLR2004",
]
"gpu_engine/test_kernel_compile.py" = [
    "TRY300",
    "SIM105",
]






"share/rpcauth/rpcauth.py" = [
    "ANN001",
    "ANN201",
    "D103",
    "S105",
]
"get_balance_addresses.py" = [
    "T201", "ANN001", "ANN201",
    "DTZ005",
    "BLE001",
    "C901",
    "D205",
    "PLR0912",
    "PLR0915",
    "PLW1510",
    "PTH123",
    "S603",
    "RUF034",
]
"_benchmark_gpu.py" = [
    "T201", "ANN001", "ANN201",
    "RUF001", "RUF002", "RUF003",
    "B007", "FBT",
    "E501",
    "NPY002",
]
"_coverage_tdr.py" = [
    "T201", "ANN001", "ANN201",
]
# ── 临时分析脚本：仅内部使用，不施加规范 ──
# ruff 不支持通配符豁免，通过全局 exclude 排除这些文件
# (已添加到 [tool.ruff] exclude 列表)

[tool.mypy]
strict = true
ignore_missing_imports = true
platform = "linux"
warn_unused_ignores = true
warn_return_any = true

# ── 模块级豁免 ────────────────────────────────────────────────
# 提取脚本：独立运行，非项目核心导入模块
[[tool.mypy.overrides]]
module = [
    "extract_utxo_hash160",
    "extract_utxo_xonly",
]
disable_error_code = [
    "no-untyped-def",
    "no-untyped-call",
    "str-bytes-safe",
    "assignment",
    "type-arg",
    "no-any-return",
]

# 测试文件：类型注解完整度低于生产代码
# (Block 2 已全部收紧 - 2026-06-01)
# gpu_engine.test_kernel_compile, gpu_engine.test_vectors 无豁免

# protobuf 生成代码：动态属性、无类型注解
[[tool.mypy.overrides]]
module = [
    "distributed.protocol_pb2",
    "distributed.protocol_pb2_grpc",
]
disable_error_code = [
    "attr-defined",
    "no-untyped-def",
]

# 分布式扫描模块：依赖 protobuf/gRPC 动态代码，降低 strict 要求
[[tool.mypy.overrides]]
module = [
    "distributed.master",
    "distributed.worker",
    "distributed.models",
    "distributed.test_distributed",
]
disable_error_code = [
    "misc",
    "attr-defined",
    "no-untyped-def",
    "union-attr",
]



# 测试目录：测试代码中的类型注解允许宽松
[[tool.mypy.overrides]]
module = [
    "tests.*",
]
disable_error_code = [
    "misc",
    "no-untyped-def",
    "no-untyped-call",
    "arg-type",
    "assignment",
    "union-attr",
    "attr-defined",
    "return-value",
]

[tool.pytest.ini_options]
markers = [
    "gpu: 需要真实 GPU 硬件的测试（无 GPU 时自动跳过）",
]
